crates/workspace/src/snapshots/moon_workspace__dep_graph__tests__sync_project__avoids_dupe_projects.snap
---
source: crates/workspace/src/dep_graph.rs
assertion_line: 343
expression: graph.to_dot()

---
digraph {
    0 [ label = "\"SetupToolchain\"" ]
    1 [ label = "\"InstallNodeDeps\"" ]
    2 [ label = "\"SyncProject(advanced)\"" ]
    1 -> 0 [ ]
    2 -> 0 [ ]
}

