crates/workspace/src/snapshots/moon_workspace__dep_graph__tests__sync_project__projects_with_deps.snap
---
source: crates/workspace/src/dep_graph.rs
assertion_line: 353
expression: graph.to_dot()

---
digraph {
    0 [ label = "\"SetupToolchain\"" ]
    1 [ label = "\"InstallNodeDeps\"" ]
    2 [ label = "\"SyncProject(foo)\"" ]
    3 [ label = "\"SyncProject(bar)\"" ]
    4 [ label = "\"SyncProject(baz)\"" ]
    5 [ label = "\"SyncProject(basic)\"" ]
    6 [ label = "\"SyncProject(noConfig)\"" ]
    1 -> 0 [ ]
    2 -> 0 [ ]
    3 -> 0 [ ]
    2 -> 3 [ ]
    4 -> 0 [ ]
    2 -> 4 [ ]
    5 -> 0 [ ]
    6 -> 0 [ ]
    5 -> 6 [ ]
}

