crates/workspace/src/snapshots/moon_workspace__dep_graph__tests__sync_project__projects_with_tasks.snap
---
source: crates/workspace/src/dep_graph.rs
assertion_line: 312
expression: graph.to_dot()

---
digraph {
    0 [ label = "\"SetupToolchain\"" ]
    1 [ label = "\"InstallNodeDeps\"" ]
    2 [ label = "\"SyncProject(noConfig)\"" ]
    3 [ label = "\"SyncProject(tasks)\"" ]
    1 -> 0 [ ]
    2 -> 0 [ ]
    3 -> 0 [ ]
}

